# trab_final_bd

./: Cargo.toml  Makefile  readme.md  up.sql
migrations/: 20231121044804_init.up.sql  20231123131818_init.up.sql
src/: main.rs
src/models/: developer.rs  game.rs  genre.rs  mod.rs  orders.rs  role.rs  session.rs  user.rs
src/routes/: config.rs  developer.rs  game.rs  genre.rs  health_route.rs  mod.rs  orders.rs  role.rs  session.rs  user.rs
