[package]
name = "trab_final_bd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
date_time = "2.2.0"
datetime = "0.5.2"
dotenv = "0.15.0"
env_logger = "0.10.1"
hmac = "0.12.1"
jsonwebtoken = "9.1.0"
jwt = "0.16.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
